--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+
 html, body, #root {
     font: 0.9rem sans-serif;
     background: #74C3CC;
@@ -11,6 +18,7 @@ html, body, #root {
     background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418) ), url('https://i.ibb.co/zVg56v6/weatherbackground.jpg');
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
  
 .main-container {
@@ -60,7 +68,8 @@ p {
 }
  
 .city-name {
-    font-size: 2em;
+    font-size: 2.25em;
+
 }
  
 .city-name sup {
@@ -75,6 +84,10 @@ p {
     margin-top: 10px;
     width: 100px;
     height: 100px;
+}
+
+.city-time{
+ margin-top: .5em;
 }
  
 .info {
@@ -104,7 +117,58 @@ p {
     text-align: center;
     margin: 20px;
 }
- 
+.carousel{
+display: flex;
+flex-direction: column;
+
+align-items: center; 
+
+
+}
+.slide{
+    padding: 40px 20%;
+}
+.city-temp-forecast {
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #1e2432;
+    text-align: center;
+    width: 100%;
+    
+}
+
+.temp-line{
+    padding: 0.2em 0.6em;
+    margin-left: 0.2em;
+    border-radius: 30px;
+    color: #fff;
+    background: #74C3CC;
+}
+.btn-list{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+
+}
+.select-btn{
+    padding: 0.2em 0.6em;
+    border-radius: 30px;
+    color: #fff;
+    background: #74C3CC;
+    opacity: .75;
+    margin-right: 1em;
+    margin-left: 1em;
+}
+.active{
+    opacity: 1;
+}
+button.btn:active{
+opacity: 1;
+}
 @media only screen and (max-width: 600px) {
     .search {
         padding: 20px 15%;
@@ -112,5 +176,8 @@ p {
  
     .city {
         padding: 40px 20%;
+    }
+    .slide{
+        padding: 40px 10%;
     }
 }
