--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,9 @@ html, body, #root {
     font: 0.9rem sans-serif;
     background: #74C3CC;
     color: #1e2432;
-    height: 100%;
+    height: 100vh;
     margin: 0;
+    width: 100vw;
 }
  
 .main-container {
@@ -19,6 +20,8 @@ html, body, #root {
     background-size: cover;
     background-position: center;
     overflow: hidden;
+    width: 100vw;
+    
 }
  
 .main-container {
@@ -34,7 +37,7 @@ html, body, #root {
     padding: 20px 7%;
     border-radius: 20px;
     border: none;
-    margin-bottom: 2%;
+    margin-bottom: 1%;
     background: rgba(250, 250, 250, 0.85);
 }
  
@@ -43,7 +46,7 @@ html, body, #root {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 40px 8%;
+    padding: 20px 20%;
     border-radius: 20px;
     background: rgba(250, 250, 250, 0.85);
     box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
@@ -58,7 +61,7 @@ p {
 .city-temp {
     font-size: 5rem;
     font-weight: bold;
-    margin-top: 10px;
+    margin-top: 5px;
     color: #1e2432;
     text-align: center;
 }
@@ -98,8 +101,8 @@ p {
 
 .info-circle{
     color: #fff;
-    font-size: large;
-    margin-bottom: 2%;
+    font-size: 16px;
+    margin-bottom: 1%;
 }
 .showInfo{
     height: 15px;
@@ -118,6 +121,7 @@ p {
     margin: 20px;
 }
 .carousel{
+
 display: flex;
 flex-direction: column;
 
@@ -128,12 +132,12 @@ align-items: center;
 .slide{
     padding: 40px 20%;
 }
+
 .city-temp-forecast {
     display: flex;
     flex-direction: column;
     font-size: 1rem;
     font-weight: bold;
-    margin-top: 10px;
     color: #1e2432;
     text-align: center;
     width: 100%;
@@ -152,7 +156,7 @@ align-items: center;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    margin-top: 2em;
+    margin-top: 1em;
 }
 .select-btn{
     padding: 0.2em 0.6em;
@@ -171,7 +175,7 @@ opacity: 1;
 }
 @media only screen and (max-width: 600px) {
     .search {
-        padding: 20px 15%;
+        padding: 20px 10%;
     }
  
     .city {
@@ -179,5 +183,9 @@ opacity: 1;
     }
     .slide{
         padding: 40px 10%;
+    }
+    .main-container{
+    overflow: hidden !important;
+
     }
 }
