--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@ html, body, #root {
     margin: 0;
     width: 100vw;
 }
+.main{
+    max-height: 100vh;
+}
 .header{
     display: flex;
     flex-direction: column;
@@ -25,16 +28,8 @@ html, body, #root {
     width: 120px
 }
  
-.main-container {
-    height: 10vh;
-    background-size: cover;
-    background-position: center;
-    overflow: hidden;
-    width: 100vw;
-    
-}
- 
-.main-container {
+
+.container {
     height: 100%;
     display: flex;
     justify-content: center;
