--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@ html, body, #root {
     max-height: 100vh;
 }
 .header{
+    padding-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -25,7 +26,8 @@ html, body, #root {
     color: #74C3CC;
 }
 .header img{
-    width: 120px
+    width: 120px;
+    height: 82px
 }
  
 
@@ -42,16 +44,40 @@ html, body, #root {
     padding: 20px 7%;
     border-radius: 20px;
     border: none;
-    margin-top: 2%;
-    margin-bottom: 1%;
+    margin-top: 4em;
+    margin-bottom: 1em;
     background: rgba(250, 250, 250, 0.85);
 }
+
 ::placeholder {
     
     font-size: 1.5em;
     text-align: center;
   }
- 
+  .exit-container{
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      margin-top: 2em;
+      margin-bottom: 2em;
+  }
+  .exit{
+      height: 40px;
+      width: 40px;
+    display: inline;
+    position: relative;
+    justify-content: center;
+    color: #74C3CC;
+    padding-top: 3px;
+    text-align: center;
+    font-size: 2em;
+    font-weight: 600;
+    border: black;
+    border-radius: 60px;
+    background: rgba(250, 250, 250, 0.85);
+    cursor: pointer;
+  }
+
 .city {
     display: flex;
     align-items: center;
@@ -169,6 +195,7 @@ p {
     margin-top: 1em;
 }
 .select-btn{
+    font-size: 16px;
     padding: 0.2em 0.6em;
     border-radius: 30px;
     color: #fff;
@@ -201,5 +228,5 @@ opacity: 1;
     overflow: hidden !important;
 
     }
-    /*  */
+
 }
