--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ html, body, #root {
     margin-top: 4em;
     margin-bottom: 1em;
     background: rgba(250, 250, 250, 0.85);
+    font-size: 16px;
 }
 
 ::placeholder {
