--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    overflow-y: hidden;
+   
 }
 
 
@@ -14,6 +14,7 @@ html, body, #root {
     height: 100vh;
     margin: 0;
     width: 100vw;
+    overflow: hidden;
 }
 .main{
     max-height: 100vh;
@@ -89,6 +90,7 @@ html, body, #root {
     border-radius: 20px;
     background: rgba(250, 250, 250, 0.85);
     box-shadow: 10px 10px 5px 0px rgba(15, 15, 15, 0.404);
+    /* margin-right: .5rem; */
 }
  
 p {
@@ -226,9 +228,6 @@ opacity: 1;
   
         padding: 25px 10%;
     }
-    .main-container{
-    overflow: hidden !important;
-
-    }
+ 
 
 }
